# robot_mcp

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  cliff.toml  config.yaml  examples_mcp_client.py  fastmcp_main_client.py  fastmcp_main_server.py  gradio_environment.yml  index.html  launch_gui.bat  launch_gui.sh  mcp_server_launcher.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_gradio.txt  robot_config.yaml  secrets.env.template  sitemap.xml
.github/workflows/: auto-version.yml  codeql.yml  docs.yml  lint.yml  tests.yml
INSTALLATION/: index.html
api/: index.html
api_reference_auto/: index.html
client/: __init__.py  fastmcp_groq_client.py  fastmcp_universal_client.py  fastmcp_universal_client_with_config.py  mcp_groq_client.py
communication_readme/: index.html
config/: config_manager.py  explanation_config.yaml  niryo_config.yaml  robot_config.yaml  widowx_config.yaml
config_readme/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/api/: index.html
dev/architecture/: index.html
dev/configuration/: index.html
dev/development/: index.html
dev/development/docstring_style/: index.html
dev/development/metrics/: index.html
dev/development/releasing/: index.html
dev/en/: index.html
dev/en/CHANGELOG/: index.html
dev/en/api/: index.html
dev/en/api_reference_auto/: index.html
dev/en/architecture/: index.html
dev/en/communication_readme/: index.html
dev/en/configuration/: index.html
dev/en/development/: index.html
dev/en/development/docstring_style/: index.html
dev/en/development/metrics/: index.html
dev/en/development/releasing/: index.html
dev/en/examples/: index.html
dev/en/getting-started/: index.html
dev/en/gradio_setup_instructions/: index.html
dev/en/installation/: index.html
dev/en/mcp_api_reference/: index.html
dev/en/troubleshooting/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: README.md  api.md  api_reference_auto.md  communication_readme.md  config_readme.md  examples.md  gradio_setup_instructions.md  mcp_api_reference.md  mcp_setup_guide.md  robot_repos_architecture.mmd  troubleshooting.md
docs/de/: configuration.md  examples.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/de/api/: index.md
docs/de/architecture/: index.md
docs/de/development/: docstring_style.md  index.md  metrics.md  releasing.md
docs/diagrams/: mcp_robot_control_architecture.mmd  redis_applications_architecture_diagram.mmd  robot_repos_architecture.mmd
docs/en/: CHANGELOG.md  README.md  api_reference_auto.md  configuration.md  getting-started.md  gradio_setup_instructions.md  index.md  installation.md  mcp_api_reference.md  troubleshooting.md
docs/en/api/: index.md
docs/en/architecture/: index.md
docs/en/development/: docstring_style.md  index.md  metrics.md  releasing.md
docs/en/diagrams/: mcp_robot_control_architecture.mmd
docs/tex/: redis_applications_architecture_diagram.tex
examples/: examples_mcp_client.py  fastmcp_main_client.py  index.html  robot_examples_base.py  universal_examples.py
gradio_setup_instructions/: index.html
mcp_api_reference/: index.html
mcp_setup_guide/: index.html
robot_gui/: __init__.py  mcp_app.py
scripts/: generate_api_docs.py  generate_metrics.py
search/: search_index.json
server/: __init__.py  fastmcp_robot_server.py  fastmcp_robot_server_communicative.py  fastmcp_robot_server_unified.py  fastmcp_robot_server_with_config.py  mcp_robot_server.py  schemas.py
tests/: README.md  conftest.py  test_config_manager.py  test_fastmcp_client.py  test_fastmcp_server.py  test_gui.py  test_integration.py
tex/: architecture_package.tex  redis_applications_architecture_diagram.tex  robot_repos_architecture.tex
troubleshooting/: index.html
